apps/backend/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: backend
  labels:
    app: backend
spec:
  selector:
    app: backend
  ports:
    - name: http
      port: 3000
      targetPort: 3000
